--- a/articles/mariadb/TOC.yml
+++ b/articles/mariadb/TOC.yml
@@ -72,6 +72,9 @@
           href: concepts-data-access-security-private-link.md
         - name: 高度な脅威保護
           href: concepts-data-access-and-security-threat-protection.md
+        - name: Azure Policy によるセキュリティ制御
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
         - name: セキュリティ ベースライン
           href: security-baseline.md
     - name: ビジネス継続性
