--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -114,6 +114,9 @@
           href: concepts-azure-ad-authentication.md
         - name: インフラストラクチャの二重暗号化
           href: concepts-infrastructure-double-encryption.md
+        - name: Azure Policy によるセキュリティ制御
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
         - name: セキュリティ ベースライン
           href: security-baseline.md
     - name: ビジネス継続性
