--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -111,6 +111,9 @@
           href: ddos-protection-overview.md
         - name: 仮想ネットワーク TAP
           href: virtual-network-tap-overview.md
+        - name: Azure Policy によるセキュリティ制御
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
     - name: サブネット
       items:
         - name: サブネットの拡張
