--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -590,6 +590,8 @@
           href: enable-customer-managed-key.md
         - name: マネージド仮想ネットワーク
           href: managed-virtual-network-private-endpoint.md
+        - name: Data Factory の Azure Private Link
+          href: data-factory-private-link.md
     - name: 監視と管理
       items:
         - name: 視覚的な監視
