--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -117,6 +117,9 @@
               href: concepts-data-encryption-postgresql.md
             - name: インフラストラクチャの二重暗号化
               href: concepts-infrastructure-double-encryption.md
+            - name: Azure Policy によるセキュリティ制御
+              displayName: 'regulatory, compliance, standards, domains'
+              href: ./security-controls-policy.md
             - name: Azure セキュリティ ベンチマーク用のセキュリティ ベースライン
               href: security-baseline.md
         - name: ビジネス継続性
