--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -36,12 +36,6 @@
       href: concepts-security.md
 - name: 操作方法ガイド
   items:
-    - name: 開発
-      items:
-        - name: API と SDK を使用する
-          href: how-to-use-apis-sdks.md
-        - name: AutoRest を使用してカスタム SDK を作成する
-          href: how-to-create-custom-sdks.md
     - name: 配置
       items:
         - name: Azure Digital Twins CLI を使用する
@@ -78,6 +72,14 @@
           href: how-to-create-azure-function.md
         - name: ツイン グラフにクエリを実行する
           href: how-to-query-graph.md
+    - name: クライアント アプリの開発
+      items:
+        - name: API と SDK を使用する
+          href: how-to-use-apis-sdks.md
+        - name: AutoRest を使用してカスタム SDK を作成する
+          href: how-to-create-custom-sdks.md
+        - name: Azure SignalR Service と統合する
+          href: how-to-integrate-azure-signalr.md
     - name: 入力を接続する
       items:
         - name: IoT Hub からテレメトリを取り込む
@@ -188,6 +190,8 @@
           href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-iothub-integration/adt-iothub-provision-sample/'
         - name: Azure Digital Twins のカスタム Swagger
           href: 'https://docs.microsoft.com/samples/azure-samples/digital-twins-custom-swaggers/azure-digital-twins-custom-swaggers/'
+        - name: SignalR 統合のサンプル
+          href: 'https://docs.microsoft.com/samples/azure-samples/digitaltwins-signalr-webapp-sample/digital-twins-samples/'
     - name: Azure ツール
       items:
         - name: Azure Cloud Shell
