--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -187,7 +187,7 @@
               href: concepts-data-flow-monitoring.md
             - name: データ フローのパフォーマンス
               href: concepts-data-flow-performance.md
-            - name: グラフの管理
+            - name: データ フロー キャンバスの管理
               href: concepts-data-flow-manage-graph.md
             - name: 式ビルダー
               href: concepts-data-flow-expression-builder.md
