--- a/articles/data-lake-store/TOC.yml
+++ b/articles/data-lake-store/TOC.yml
@@ -138,7 +138,7 @@
           href: data-lake-store-power-bi.md
         - name: Data Catalog で使用する
           href: data-lake-store-with-data-catalog.md
-        - name: SQL Data Warehouse で PolyBase を使用する
+        - name: Azure Synapse Analytics で PolyBase と共に使用する
           href: ../sql-data-warehouse/sql-data-warehouse-load-from-azure-data-lake-store.md
         - name: SQL Server Integration Services と共に使用する
           href: 'https://docs.microsoft.com/sql/integration-services/connection-manager/azure-data-lake-store-connection-manager'
