--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -124,7 +124,7 @@
                   href: ./sql-data-warehouse/sql-data-warehouse-concept-resource-utilization-query-activity.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: Spark プール履歴サーバー
               href: ./spark/apache-spark-history-server.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -222,6 +222,8 @@
                   href: ./spark/apache-spark-version-support.md
             - name: Azure Synapse Studio ノートブック
               href: ./spark/apache-spark-development-using-notebooks.md
+            - name: TokenLibrary を使用した資格情報のセキュリティ保護
+              href: ./spark/apache-spark-secure-credentials-with-tokenlibrary.md
             - name: .NET for Apache Spark
               href: ./spark/spark-dotnet.md
             - name: Apache Spark 機械学習
@@ -248,7 +250,7 @@
               href: sql/best-practices-sql-on-demand.md
             - name: SQL プールのベスト プラクティス
               href: sql/best-practices-sql-pool.md
-        - name: データの読み込み
+        - name: データの取り込みと準備
           items:
             - name: 概要
               href: ./sql-data-warehouse/design-elt-data-loading.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
@@ -416,7 +418,7 @@
                   href: ./sql-data-warehouse/sql-data-warehouse-how-to-manage-and-monitor-workload-importance.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
             - name: Gen2 へのアップグレード
               href: ./sql-data-warehouse/upgrade-to-latest-generation.md?toc=/azure/synapse-analytics/toc.json&bc=/azure/synapse-analytics/breadcrumb/toc.json
-    - name: データの読み込み
+    - name: データの取り込みと準備
       items:
         - name: データ ウェアハウスへ
           items:
