--- a/articles/lighthouse/toc.yml
+++ b/articles/lighthouse/toc.yml
@@ -47,6 +47,9 @@
     - name: 顧客を表示し、管理する
       displayName: my customers
       href: ./how-to/view-manage-customers.md
+    - name: パートナー ID をリンクする
+      displayName: 'partner earned credit, pec, mpn'
+      href: ./how-to/partner-earned-credit.md
     - name: 委任へのアクセスを削除する
       displayName: 'delete, undelegate'
       href: ./how-to/remove-delegation.md
