commit translated contents

--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -69,6 +69,8 @@
           href: tokens-overview.md
         - name: アクセス トークンの要求
           href: access-tokens.md
+    - name: ポリシー キー
+      href: policy-keys-overview.md
     - name: ユーザー フローとポリシー
       items:
         - name: ユーザー フロー
