--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: hub-page
   ms.date: 03/24/2020
   ms.author: trbye
-  ms.openlocfilehash: 17cc7914c8e02d3b38e2527e1c0bff3afb885b0b
-  ms.sourcegitcommit: 420c30c760caf5742ba2e71f18cfd7649d1ead8a
+  ms.openlocfilehash: 7b64ef2739b8e6531f7531f9a135b7fb5ffe3467
+  ms.sourcegitcommit: d0541eccc35549db6381fa762cd17bc8e72b3423
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 08/28/2020
-  ms.locfileid: "89055098"
+  ms.lasthandoff: 09/09/2020
+  ms.locfileid: "89568020"
 highlightedContent:
   items:
   - title: 音声サービスとは
@@ -37,15 +37,15 @@ conceptualContent:
   items:
   - title: 音声テキスト変換
     links:
+    - itemType: overview
+      text: 音声テキスト変換について
+      url: speech-to-text.md
     - itemType: quickstart
-      text: マイクから音声を認識する
-      url: quickstarts/speech-to-text-from-microphone.md
-    - itemType: quickstart
-      text: オーディオ ファイルから音声を認識する
-      url: quickstarts/speech-to-text-from-file.md
+      text: 音声変換の概要
+      url: get-started-speech-to-text.md
     - itemType: how-to-guide
-      text: 音声認識の基礎
-      url: speech-to-text-basics.md
+      text: Custom Speech を使用して精度を向上させる
+      url: how-to-custom-speech.md
     footerLink:
       text: 詳細
       url: index-speech-to-text.yml
