--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -100,7 +100,7 @@
       href: iot-hub-scaling.md
     - name: 高可用性とディザスター リカバリー
       href: iot-hub-ha-dr.md
-    - name: IoT ハブを別のリージョンに複製する方法
+    - name: IoT Hub を別のリージョンに複製する方法
       href: iot-hub-how-to-clone.md
     - name: IoT Hub IP アドレスについて
       href: iot-hub-understand-ip-address.md
@@ -321,7 +321,7 @@
           href: iot-hub-monitor-resource-health.md
         - name: X.509 証明書によるハブのセキュリティ保護
           href: iot-hub-security-x509-get-started.md
-        - name: IoT ハブのアップグレード
+        - name: IoT Hub のアップグレード
           href: iot-hub-upgrade.md
         - name: メッセージのトレースを有効にする
           href: iot-hub-distributed-tracing.md
